<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/dg1patch_white" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal" android:background="@color/dg1patch_littleblue" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<RelativeLayout android:layout_gravity="center" android:padding="4.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
			<TextView android:textColor="@color/dg1patch_black" android:id="@id/dg1patch_label_appname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dg1patch_label_app_name" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
			<TextView android:textColor="@color/dg1patch_lightblue" android:id="@id/dg1patch_tv_appname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:minWidth="120.0dip" android:singleLine="true" android:layout_toRightOf="@id/dg1patch_label_appname" />
			<TextView android:textColor="@color/dg1patch_black" android:id="@id/dg1patch_label_prefname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dg1patch_label_shared_preference" android:singleLine="true" android:layout_below="@id/dg1patch_label_appname" android:layout_alignRight="@id/dg1patch_label_appname" android:layout_alignParentLeft="true" />
			<TextView android:textColor="@color/dg1patch_lightblue" android:id="@id/dg1patch_tv_prefname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:singleLine="true" android:layout_toRightOf="@id/dg1patch_label_prefname" android:layout_below="@id/dg1patch_tv_appname" />
		</RelativeLayout>
	</LinearLayout>
	<ProgressBar android:layout_gravity="center" android:id="@id/dg1patch_progress_bar" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" style="?android:attr/progressBarStyleLarge" />
	<ScrollView android:id="@id/dg1patch_scroll_view" android:visibility="gone" android:scrollbars="horizontal|vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
		<HorizontalScrollView android:scrollbars="horizontal|vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
			<TableLayout android:id="@id/dg1patch_valueTable" android:layout_width="wrap_content" android:layout_height="fill_parent" android:stretchColumns="*" />
		</HorizontalScrollView>
	</ScrollView>
	<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/dg1patch_footer_layout" android:background="@color/dg1patch_littleblue" android:padding="4.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<EditText android:id="@id/dg1patch_tv_keyword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="text" />
		<Button android:id="@id/dg1patch_button_search" android:layout_width="96.0dip" android:layout_height="40.0dip" android:text="@string/dg1patch_search" style="@style/dg1patch_button" />
		<Button android:layout_gravity="center" android:id="@id/dg1patch_button_close" android:layout_width="96.0dip" android:layout_height="40.0dip" android:text="@string/dg1patch_close" style="@style/dg1patch_button" />
	</LinearLayout>
</LinearLayout>
