<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/dg1patch_white" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<requestFocus />
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ImageView android:id="@id/dg1patch_image_prev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/dg1patch_previous" android:scaleType="fitCenter" android:layout_centerVertical="true" />
		<ImageView android:id="@id/dg1patch_image_next" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/dg1patch_next" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
		<TextView android:textColor="@color/dg1patch_lightblue" android:id="@id/dg1patch_tv_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/dg1patch_image_next" android:layout_toRightOf="@id/dg1patch_image_prev" />
		<LinearLayout android:orientation="horizontal" android:id="@id/dg1patch_key_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_toLeftOf="@id/dg1patch_image_next" android:layout_toRightOf="@id/dg1patch_image_prev" android:layout_below="@id/dg1patch_tv_type">
			<TextView android:textColor="@color/dg1patch_lightblue" android:layout_width="40.0dip" android:layout_height="wrap_content" android:text="@string/dg1patch_key" />
			<EditText android:enabled="false" android:textColor="@color/dg1patch_black" android:id="@id/dg1patch_et_key" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minWidth="100.0dip" android:layout_weight="1.0" android:inputType="text" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal" android:id="@id/dg1patch_value_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/dg1patch_image_next" android:layout_toRightOf="@id/dg1patch_image_prev" android:layout_below="@id/dg1patch_key_layout">
			<TextView android:textColor="@color/dg1patch_lightblue" android:layout_gravity="center_vertical" android:layout_width="40.0dip" android:layout_height="wrap_content" android:text="@string/dg1patch_value" />
			<EditText android:textColor="@color/dg1patch_black" android:id="@id/dg1patch_et_valuey" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="10" android:minLines="3" android:layout_weight="1.0" android:inputType="textMultiLine" />
		</LinearLayout>
		<TextView android:id="@id/dg1patch_tv_noteditable" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/dg1patch_image_next" android:layout_toRightOf="@id/dg1patch_image_prev" android:layout_below="@id/dg1patch_value_layout" />
	</RelativeLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@id/dg1patch_btn_save" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dg1patch_save" android:layout_weight="1.0" style="@style/dg1patch_button" />
		<Button android:id="@id/dg1patch_btn_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dg1patch_close" android:layout_weight="1.0" style="@style/dg1patch_button" />
	</LinearLayout>
</LinearLayout>
